# automotive-dashboard

./: CMakeLists.txt  CarInfo.qml  CenterConsole.qml  Gauges.qml  IndicatorPanel.qml  KeyInputHandler.qml  Navigator.qml  README.md  SpeedFuelGauge.qml  TurnIndicator.qml  backend.cpp  backend.h  main.cpp  main.qml
